# automation-kit

./: README.md  pyproject.toml
.github/workflows/: ci.yml
adapters/: __init__.py  errors.py
adapters/appium/: __init__.py  session.py
adapters/selenium/: __init__.py  session.py
automation_core/: __init__.py
automation_core/actions/: __init__.py  models.py
automation_core/artifacts/: __init__.py  store.py
automation_core/capabilities/: __init__.py  contracts.py  errors.py  executor.py  models.py  registry.py  resolver.py
automation_core/config/: __init__.py  sources.py
automation_core/drivers/: __init__.py  contracts.py
automation_core/events/: __init__.py  models.py
automation_core/execution/: __init__.py  context.py  failures.py  results.py
automation_core/retries/: __init__.py  policy.py
automation_core/state/: __init__.py  models.py
automation_core/tasks/: __init__.py  lifecycle.py  runner.py
automation_runner/: __init__.py  __main__.py  cli.py  collector.py  config.py  context.py  dry_run.py  policies.py  reports.py  runner.py  runtime.py  steps.py  workflows.py
automation_runner/schemas/: __init__.py  report-schema-v2.json
docs/: adding-a-workflow.md  artifacts.md  compatibility.md  development-log.md  development-system.md  development.md  ecosystem.md  report-schema-v1.json  slidex-visual-platform.md  technical-landscape.md
examples/: README.md  __init__.py  workflows.py
examples/damai_android/: README.md  __init__.py  smoke.py
examples/damai_web/: README.md  __init__.py  smoke.py
tests/: test_imports.py
tests/actions/: test_action_models.py
tests/adapters/: test_resource_ownership.py
(+148 files in other folders)
