[tool.poetry]
name = "automation-kit"
version = "0.1.0"
description = "Python-first automation application toolkit for website and Android workflows"
authors = ["mango"]
readme = "README.md"
packages = [
    { include = "automation_core" },
    { include = "adapters" },
    { include = "examples" },
    { include = "automation_runner" },
]
include = [
    { path = "automation_runner/schemas/report-schema-v1.json", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
test = "pytest:main"
tests = "pytest:main"
automation-runner = "automation_runner.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=automation_core",
    "--cov=automation_runner",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=80",
]
markers = [
    "integration: tests requiring browser, device, Appium, or network",
]

[tool.coverage.run]
source = ["automation_core", "automation_runner"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
